Add testimonial and improve styling on login page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -147,3 +147,14 @@ a#download.dropdown-toggle:hover {
   color: #19C4A2;
 	font-weight: 900;
 }
+
+// Forms
+
+legend {
+  text-align: center;
+}
+.forgot > a {
+  color: #1A252F;
+  font-size: 12px;
+  margin-top: -20px;
+}
