--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -207,6 +207,19 @@ p.home-bullets {
   color: #000;
   padding: 5px;
   overflow: auto;
+  a.price-block {
+    display: block;
+    overflow: auto;
+  }
+  .package-and-price {
+    cursor: pointer;
+    margin: 0 5px;
+    overflow: auto;
+    padding: 5px 0 0 0;
+    &:hover {
+      background: #D1D1D1;
+    }
+  }
   a {
     color: #3a99d3;
     font-size: 24px;
@@ -224,12 +237,15 @@ p.home-bullets {
     margin-bottom: 20px;
     text-align: center;
   }
-  h4 {
+  a.h4 {
+    color: #000;
     font-size: 24px;
     margin-top: 0;
+    padding-bottom: 5px;
+    text-decoration: none;
   }
   p {
-    margin-top: -10px;
+    margin-top: 0;
     @media (max-width: 440px) {
       margin-bottom: -5px;
     }
@@ -310,14 +326,70 @@ p.home-bullets {
   }
 } 
 .pricing-table .action a{ 
-    border-color: #B83737; 
-    border-width: 0px; 
-    border-radius: 2px; 
-    background-color: #EEEEEE; 
-    padding-top: 5px; 
-    padding-bottom: 5px; 
-    padding-left: 15px; 
-    padding-right: 15px; 
-    border-style: solid; 
-    color: #000000; 
+  border-color: #B83737; 
+  border-width: 0px; 
+  border-radius: 2px; 
+  background-color: #EEEEEE; 
+  padding-top: 5px; 
+  padding-bottom: 5px; 
+  padding-left: 15px; 
+  padding-right: 15px; 
+  border-style: solid; 
+  color: #000000; 
+}
+.testimonial {
+  background: #EDEDED;
+  margin-top: 50px;
+  padding: 50px 0;
+  width: 100%;
+  img {
+    display: block;
+    margin: 25px auto 10px;
+  }
+  p.name {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+  }
+  p.location {
+    font-size: 16px;
+    font-style: italic;
+    margin-top: -15px;
+    text-align: center;
+  }
+  .testimonial-words:before {
+    color: #E2E2E2;
+    content:"\f10d";
+    font-family: "FontAwesome";
+    font-size: 120px;
+    margin-left: -20px;
+    @media (max-width: 767px) {
+      margin-left: 0;
+    }
+  }
+  .testimonial-words:after {
+    color: #E2E2E2;
+    content:"\f10e";
+    font-family: "FontAwesome";
+    font-size: 120px;
+    float: right;
+    margin-top: -120px;
+  }
+  .testimonial-words {
+    p {
+      font-size: 24px;
+      font-style: italic;
+      margin-top: -130px;
+      padding-left: 60px;
+      padding-right: 40px;
+      padding-top: 0;
+      @media (max-width: 767px) {
+        padding-left: 40px;
+        padding-right: 0;
+      }
+      @media (max-width: 500px) {
+        padding-left: 20px;
+      }
+    }
+  }
 }
