--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 		          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">My Account <span class="caret"></span></a>
 		          <ul class="dropdown-menu" aria-labelledby="download">
 	              <%#= link_to 'My Profile', user_path(current_user) %>
-	              <li><%= link_to 'My Tests', tests_path %></li>
+	              <li><%= link_to 'My Account', tests_path %></li>
 		            <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
 		            <li class="divider"></li>
 		            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
@@ -44,11 +44,8 @@
 	        	</li>
 	        	
 	        <% else %>
-	            <%= link_to "Pass Your Tests Now", :study_and_practice, class: "btn btn-danger navbar-btn order" %>
-	          <!--
-		        <li><%#= link_to "Create Account", new_user_registration_path %></li>
-		        <li><%#= link_to "Log In", new_user_session_path %></li>
-		        -->
+	          <%= link_to "Pass Your Tests Now", :study_and_practice, class: "btn btn-danger navbar-btn order" %>
+		        <li><%= link_to "Log In", new_user_session_path %></li>
 		      <% end %>
 	      </ul>
 
@@ -68,7 +65,7 @@
 		    <li><%= link_to "Help & Support", "#" %>
 		    <li><%= link_to "Guarantee", "#" %>
 		    <li><%= link_to "Terms & Conditions", "#" %>
-		    <li><%= link_to "Blog", "#" %>
+		    <li><%= link_to "Blog", "http://blog.cdlstudyguidehq.com" %>
 		  </ul>
 		</footer>
 	<% else %>
@@ -79,7 +76,7 @@
 		    <li><%= link_to "Help & Support", "#" %>
 		    <li><%= link_to "Guarantee", "#" %>
 		    <li><%= link_to "Terms & Conditions", "#" %>
-		    <li><%= link_to "Blog", "#" %>
+		    <li><%= link_to "Blog", "http://blog.cdlstudyguidehq.com" %>
 		  </ul>
 		</footer>
 	<% end %>
