--- a/app/views/pages/cdl_study_guides_and_practice_tests.html.erb
+++ b/app/views/pages/cdl_study_guides_and_practice_tests.html.erb
@@ -16,41 +16,55 @@
     <div class="home-prices">
       <h2>Packages <span class="label label-danger">Best Deal</span></h2>
       <h3>Study Guides + Practice Tests</h3>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Class A + All Endorsements</h4>
-        <p>(Study Guide + 150 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Class A + All Endorsements", :class_a_endorsement, class: "h4" %>
+          <p>(Study Guide + 150 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$47", :class_a_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$47", :class_a_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Class B + All Endorsements</h4>
-        <p>(Study Guide + 100 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Class B + All Endorsements", :class_b_endorsement, class: "h4" %>
+          <p>(Study Guide + 100 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$47", :class_b_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$47", :class_b_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Double/Triple</h4>
-        <p>(Study Guide + 50 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Double/Triple", :double_triple_endorsement, class: "h4" %>
+          <p>(Study Guide + 50 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :double_triple_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :double_triple_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Haz Mat (H)</h4>
-        <p>(Study Guide + 50 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Haz Mat (H)", :hazardous_materials_endorsement, class: "h4" %>
+          <p>(Study Guide + 50 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :hazardous_materials_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :hazardous_materials_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Tanker (N)</h4>
-        <p>(Study Guide + 50 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Tanker (N)", :tank_vehicle_endorsement, class: "h4" %>
+          <p>(Study Guide + 50 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :tank_vehicle_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :tank_vehicle_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>Passenger (P)</h4>
-        <p>(Study Guide + 50 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "Passenger (P)", :passenger_vehicle_endorsement, class: "h4" %>
+          <p>(Study Guide + 50 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :passenger_vehicle_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :passenger_vehicle_endorsement %></div>
-      <div class="col-xs-10 col-xxs-12">
-        <h4>School Bus (S)</h4>
-        <p>(Study Guide + 50 Practice Questions)</p>
+      <div class="package-and-price">
+        <div class="col-xs-10 col-xxs-12">
+          <%= link_to "School Bus (S)", :school_bus_endorsement, class: "h4" %>
+          <p>(Study Guide + 50 Practice Questions)</p>
+        </div>
+        <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :school_bus_endorsement %></div>
       </div>
-      <div class="col-xs-2 col-xxs-12"><%= link_to "$17", :school_bus_endorsement %></div>
     </div>
   </div>
 
