--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -1,54 +1,155 @@
 <% content_for :head do %>
-  <title>Class A Endorsement Study Guide & Practice Tests</title>
-  <meta name="description" content="Class A Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
+  <title>CDL Class A Practice Test and Study Guide</title>
+  <meta name="description" content="If you're looking for the best CDL Class A Practice Test and Study Guide, you need to check these out. We guarantee you'll pass.">
 <% end %>
 
 <div class="row text-center">
-  <h1>Class A Endorsement Study Guide and Practice Tests</h1>
+  <div class="col-sm-12">
+    <h1>CDL Class A Practice Test and Study Guide</h1>
+  </div>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
-
-<div class="row pricing-row">
+<div class="row test-page-top">
   <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>24</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SWYAGQ6PPCPQ6", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	  <p>If you came here looking for either a CDL Class A Practice Test or CDL Class A Study Guide, then you have come to the right place! Here at CDL Study Guide HQ, we specialize in helping students pass their commercial drivers license Class A endorsement test. You can access our proven practice tests through our CDL Class A Practice Test Portal. The Class A CDL Test Portal is the easiest software to use. We use actual test questions for our exam material. Our CDL Class A CDL Study Guide is a perfect supplement to our Test Portal. For best results we tell our customers to read the Class A CDL Study Guide first.</p>
+	</div>
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>47</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D99NGNCK8UB6", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>37</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZTWRYCP37U2H8", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h3>Class A (Three Sections)</h3>
+
+			<ol class="main-list">
+			  <strong><li>General Knowledge</li></strong>
+			    <ol class="inner-list">
+						<li>Section 1: Introduction
+						<li>Section 2: Driving Safely
+						<li>Section 3: Transporting Cargo Safely
+						<li>Section 11: Pre-Trip Vehicle Inspection Test
+						<li>Section 12: Basic Vehicle Control Skills Test
+						<li>Section 13:  On-Road Driving
+					</ol>
+			  <strong><li>Air brake</li></strong>
+			    <ol class="inner-list">
+			      <li>Section 5: Air Brakes
+			    </ol>
+			  <strong><li>Combination Vehicles</li></strong>
+			    <ol class="inner-list">
+			      <li>Section 6: Combination Vehicles
+			    </ol>
+			</ol>
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/HNWSfcY7eSo" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>CDL Class A Study Guide</h2>
+			<%= image_tag "cdl-study-guide-and-practice-test-small.png", alt: "CDL study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Simple to Understand!
+			  <li>Don't Memorize Hundreds of Pages!
+			  <li>We have YOUR State!
+			  <li>EASY TO READ
+			</ul>
+			<p>It took us a long time to create our Class A CDL Study Guide. After many long hours the Class A Study Guide is here for you to buy. Our strategy. Take the DMV manual plus actual exam questions, and create an easy to read Study Guide. We cut all the fluff and junk out. That means you do not have to memorize hundreds of pages of information!</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>CDL Class A Practice Test</h2>
+			<ul class="book book-test">
+			  <li>Real Exam Questions!
+			  <li>Hundreds of Questions!
+			  <li>Same as the DMV Test!
+			  <li>Works on Everything! Smart Phone, Tablet, Computer 
+			</ul>
+
+			<p>Many of the exam questions that see in your practice test are what you will see on the actual Class A Practice Test. Some of our exam questions are even harder than the actual test! If you are able to pass our practice tests, you will have no problem passing the real thing! Our writers have spent hundreds of hours preparing these test questions. The time and effort shows.</p>
+
+			<p>Our Class A Practice Test package offers hundreds of exam questions. We recommend taking practice tests in 50 question blocks. Otherwise it can be too taxing. You should never take more than 50 questions the day of your exam. Unless you failed to study and need to cram for the exam, maybe. It happens.</p>
+
+			<p>Our practice test portal looks exactly like the DMV's computer testing portal. We did that on our purpose. It is important for your practice test to look as much like the real thing as possible. Studies back this fact up! 
+			Feel free to take your practice exam on your phone, tablet, or computer.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>CDL Class A Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>24</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SWYAGQ6PPCPQ6", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
+			  <ul class="feature">
+			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>47</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6D99NGNCK8UB6", class: "btn btn-danger btn-lg" %></li>
+			  </ul>
 
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>37</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZTWRYCP37U2H8", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
