--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -5,13 +5,17 @@
 
 <div class="row text-center">
   <div class="col-sm-12">
-    <h1>CDL Class A Practice Test and Study Guide</h1>
+    <h1>The CDL Class A Study System</h1>
+    <h4>Includes the CDL Class A Study Guide and Access to the CDL Class A Practice Test Portal + All Endorsements!</h4>
   </div>
 </div>
 
 <div class="row test-page-top">
   <div class="col-sm-12">
-	  <p>If you came here looking for either a CDL Class A Practice Test or CDL Class A Study Guide, then you have come to the right place! Here at CDL Study Guide HQ, we specialize in helping students pass their commercial drivers license Class A endorsement test. You can access our proven practice tests through our CDL Class A Practice Test Portal. The Class A CDL Test Portal is the easiest software to use. We use actual test questions for our exam material. Our CDL Class A CDL Study Guide is a perfect supplement to our Test Portal. For best results we tell our customers to read the Class A CDL Study Guide first.</p>
+	  
+    <p>Welcome to the CDL Study Guide System for the Class A exam! My name is Taylor. And for three years I have been teaching hundreds of students how to pass their CDL exam. Here’s the deal. I believe in our CDL Study System so much that I Guarantee that you will love it or I will refund your money, which is a huge pain in the butt.</p>
+
+    <p>Buying the Class A packages will all unlock all materials to pass all the endorsements. That includes: Doubles/Triples, Tank Vehicles, Hazardous Material, Passenger, and School Bus. It is the most comprehensive package on the internet. No other website or company comes close to offering what we are offering you here. We’ve spent hundreds of hours perfecting our CDL Study System.</p>
 	</div>
 
 	<div class="col-sm-4 col-sm-offset-4">
@@ -26,9 +30,17 @@
 	  <div class="col-sm-5 col-sm-offset-1">
 			<h2>Material Covered</h2>
 
-			<h3>Class A (Three Sections)</h3>
+			<h4><i class="fa fa-check"></i> Everything to pass for the Class A exam!</h4>
+			<h4><i class="fa fa-check"></i> Everything to pass all the Class B exam!</h4>
+			<h4><i class="fa fa-check"></i> Everything to pass all Endorsement Exams!</h4>
 
-			<ol class="main-list">
+			<h5><i class="fa fa-arrow-right"></i> Doubles/Triples</h5>
+			<h5><i class="fa fa-arrow-right"></i> Tank Vehicles</h5>
+			<h5><i class="fa fa-arrow-right"></i> Hazardous Material</h5>
+			<h5><i class="fa fa-arrow-right"></i> Passenger</h5>
+			<h5><i class="fa fa-arrow-right"></i> School Bus</h5>
+
+			<!-- <ol class="main-list">
 			  <strong><li>General Knowledge</li></strong>
 			    <ol class="inner-list">
 						<li>Section 1: Introduction
@@ -46,11 +58,11 @@
 			    <ol class="inner-list">
 			      <li>Section 6: Combination Vehicles
 			    </ol>
-			</ol>
+			</ol> -->
 		</div>
 		<div class="col-sm-6 video">
 		  <div class="videoWrapper">
-	      <iframe src="//www.youtube.com/embed/HNWSfcY7eSo" frameborder="0" allowfullscreen></iframe>
+	      <iframe src="//www.youtube.com/embed/HNWSfcY7eSo?rel=0" frameborder="0" allowfullscreen></iframe>
 	    </div>
 	  </div>
 	</div>
