--- a/app/views/pages/class_b_endorsement.html.erb
+++ b/app/views/pages/class_b_endorsement.html.erb
@@ -4,53 +4,146 @@
 <% end %>
 
 <div class="row text-center">
-  <h1>Class B Endorsement Study Guide and Practice Tests</h1>
+  <div class="col-sm-12">
+    <h1>The CDL Class B Study Guide System</h1>
+    <h4>Includes the CDL Class B Study Guide and Access to the CDL Class B Practice Test Portal + All Endorsements!</h4>
+  </div>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
-
-<div class="row pricing-row">
+<div class="row test-page-top">
   <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>24</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SNPZU7UW5HLPU", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	  <p>Our Class B study guide stystem will help you prepare for the exams allowing you to get your license in your state. After getting your Class B license, you'll be able to drive farm labor vehicles, buses, trailers or housercars under 45 feet. We include the different endorsements so you'll be fully prepared whether you need to pull double/triple trailers, transport hazardous materials, drive school buses, pull tank vehicles, or drive vehicles without air brakes.</p> 
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>47</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HC9WC6SEQW6FY", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <p>We have a couple of excellent options to help you pass your Class B CDL exam. The first is our study guide - this was painstakingly written to prepare you for every question you'll encounter on test day. The other option is our Class B Practice Test portal. Here, you'll be able to actually practice the test online however many times you like. See where you are at in your studies with these interactive questions.</p>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>37</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KU4KCPW49Q4DU", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <p>You can get both the Class B study guide and access to the practice test portal in one convenient package as well (this is the best value, you'll save $14 and it's backed by our satisfaction guarantee). So what are you waiting for? Start preparing for your Class B exam now!</p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
+
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h4><i class="fa fa-check"></i> Section 1: Introduction</h4>
+			<h4><i class="fa fa-check"></i> Section 2: Driving Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 3: Transporting Cargo Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 4: Transporting Passengers Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 5: Air Brakes</h4>
+			<h4><i class="fa fa-check"></i> Section 11: Pre-Trip Vehicle Inspection Test</h4>
+			<h4><i class="fa fa-check"></i> Section 12: Basic Vehicle Control</h4>
+			<h4><i class="fa fa-check"></i> Section 13: On-Road Driving</h4>
+
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/yNT7YCE6EHw?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>CDL Class B Study Guide</h2>
+			<%= image_tag "cdl-study-guide-and-practice-test-small.png", alt: "CDL study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Easy to Understand!
+			  <li>Don't Memorize Hundreds of Pages!
+			  <li>Available for YOUR State!
+			  <li>Take it anywhere
+			</ul>
+			<p>Our Class B study guide took hundreds of hours to develop. It includes only the information you need to know for your Class B exam on test day with our expert strategies on how to ace the test. We cut out all the extra information and fluff you'll find if you try to prepare on your own, so you can hone in on what you need to know. Start studying now so you can get your Class B license and then the career you're after.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>CDL Class B Practice Test</h2>
+			<ul class="book book-test">
+			  <li>Actual Test Questions!
+			  <li>Interactive and easy to use!
+			  <li>Get prepared for the DMV Test!
+			  <li>Works on all devices! 
+			</ul>
+
+      <p>We built our Class B practice test portal to prepare you for the actual test. A lot of the exam questions you'll run into are the same as what you'll actually see on test day! We've even made some of the questions harder so on the day of the actual test, you'll be completely confident. We spent a lot of time on these test questions because we want you to pass.</p>
+
+      <p>In our Class B practice test portal, you'll see hundreds of test questions. It's a good idea to take 50 questions at a time (it can get really tiring trying to do them all at once). We don't recommend ever taking more than 50 at a time on your test day.</p>
+
+			<p>We designed our Class B test section to look like what you'll see at the DMV. We made it this way so your mind gets accustomed to it. Studies have shown that simulating the actual test as closely as possible can help with memory retention. The best part is that you can take our practice test on any device you have (computer, phone, or tablet, whichever is easiest for you).</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>CDL Class B Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>24</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=SNPZU7UW5HLPU", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+			  <ul class="feature">
+			    <li class="heading">
+			      Complete Package <span class="label label-danger">Best Deal</span><br/>(Practice Test + Study Guide)
+			    </li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>47</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HC9WC6SEQW6FY", class: "btn btn-primary btn-lg btn-danger" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>37</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KU4KCPW49Q4DU", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
