--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,10 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <%= link_to raw('<i class="fa fa-book"></i> CDL Study Guides'), :study_and_practice, class: "navbar-brand" %>
-	      <%= link_to raw('<i class="fa fa-pencil"></i> CDL Practice Tests'), :study_and_practice, class: "navbar-brand" %>
+	      <%= link_to root_path do %>
+	        <%= image_tag 'cdl-logo-small-white.png', class: "navbar-brand" %>
+	      <% end %>
+	      <%= link_to 'CDL Study Guide and Practice Tests', :study_and_practice, class: "navbar-brand" %>
 	    </div>
 	    <div class="navbar-collapse collapse" id="navbar">   
 	      
